--- a/CSCore/CSCore.csproj
+++ b/CSCore/CSCore.csproj
@@ -99,11 +99,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Xml" />
+    <Reference Include="System.Configuration" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AudioSubTypes.cs">
@@ -117,8 +117,8 @@
     </Compile>
     <Compile Include="ChannelMask.cs" />
     <Compile Include="ChannelMasks.cs" />
-    <Compile Include="Codecs\AAC\AacAudioProfileLevelIndication.cs" />
-    <Compile Include="Codecs\AAC\AacEncoder.cs" />
+    <Compile Include="Codecs\AAC\AACAudioProfileLevelIndication.cs" />
+    <Compile Include="Codecs\AAC\AACEncoder.cs" />
     <Compile Include="Codecs\AIFF\AiffBinaryReader.cs" />
     <Compile Include="Codecs\AIFF\AiffChunk.cs" />
     <Compile Include="Codecs\AIFF\AiffChunkContainer.cs" />
@@ -128,7 +128,7 @@
     <Compile Include="Codecs\AIFF\FormatVersionChunk.cs" />
     <Compile Include="Codecs\AIFF\SoundDataChunk.cs" />
     <Compile Include="Codecs\CodecFactoryEntry.cs" />
-    <Compile Include="Codecs\AAC\AacDecoder.cs" />
+    <Compile Include="Codecs\AAC\AACDecoder.cs" />
     <Compile Include="Codecs\ConnectionEstablishedEventArgs.cs" />
     <Compile Include="Codecs\DDP\DDPDecoder.cs" />
     <Compile Include="Codecs\CodecFactory.cs" />
@@ -170,23 +170,23 @@
     </Compile>
     <Compile Include="Codecs\FLAC\SubFrames\FlacSubFrameVerbatim.cs" />
     <Compile Include="Codecs\GetCodecAction.cs" />
-    <Compile Include="Codecs\MP1\Mp1Decoder.cs" />
-    <Compile Include="Codecs\MP2\Mp2Decoder.cs" />
-    <Compile Include="Codecs\MP3\DmoMp3Decoder.cs" />
+    <Compile Include="Codecs\MP1\MP1Decoder.cs" />
+    <Compile Include="Codecs\MP2\MP2Decoder.cs" />
+    <Compile Include="Codecs\MP3\DmoMP3Decoder.cs" />
     <Compile Include="Codecs\MP3\FrameInfoCollection.cs" />
     <Compile Include="Codecs\MP3\Mp3ChannelMode.cs" />
     <Compile Include="Codecs\MP3\Mp3Format.cs" />
     <Compile Include="Codecs\MP3\Mp3FormatId.cs" />
     <Compile Include="Codecs\MP3\Mp3Frame.cs" />
     <Compile Include="Codecs\MP3\Mp3FrameInfo.cs" />
-    <Compile Include="Codecs\MP3\Mp3MediafoundationDecoder.cs" />
+    <Compile Include="Codecs\MP3\MP3MediafoundationDecoder.cs" />
     <Compile Include="Codecs\MP3\Mp3PaddingFlags.cs" />
     <Compile Include="Codecs\MP3\Mp3WebStream.cs" />
     <Compile Include="Codecs\MP3\MpegLayer.cs" />
     <Compile Include="Codecs\MP3\MpegVersion.cs" />
     <Compile Include="Codecs\MP3\XingHeader.cs" />
     <Compile Include="Codecs\MP3\XingHeaderFlags.cs" />
-    <Compile Include="Codecs\WMA\WmaDecoder.cs" />
+    <Compile Include="Codecs\WMA\WMADecoder.cs" />
     <Compile Include="CoreAudioAPI\AudioCaptureClient.cs" />
     <Compile Include="CoreAudioAPI\AudioClientBufferFlags.cs" />
     <Compile Include="CoreAudioAPI\AudioClientSessionFlags.cs" />
@@ -330,11 +330,11 @@
     <Compile Include="SoundOut\ALSoundOut.cs" />
     <Compile Include="SoundOut\AL\ALErrorCodes.cs" />
     <Compile Include="SoundOut\DirectSoundOut.cs" />
-    <Compile Include="SoundOut\MMInterop\Utils.cs" />
-    <Compile Include="SoundOut\MMInterop\WaveCallback.cs" />
+    <Compile Include="SoundOut\MmInterop\Utils.cs" />
+    <Compile Include="SoundOut\MmInterop\WaveCallback.cs" />
     <Compile Include="SoundOut\MmDeviceFormats.cs" />
     <Compile Include="SoundOut\MmDeviceSupported.cs" />
-    <Compile Include="SoundOut\MMInterop\WaveHeaderFlags.cs" />
+    <Compile Include="SoundOut\MmInterop\WaveHeaderFlags.cs" />
     <Compile Include="SoundOut\AL\ALContext.cs" />
     <Compile Include="SoundOut\AL\ALDevice.cs" />
     <Compile Include="SoundOut\AL\ALFormat.cs" />
@@ -508,7 +508,6 @@
     <Compile Include="Utils\PostCompiler\RemoveObjAttribute.cs" />
     <Compile Include="WaveFormatExtensible.cs" />
     <Compile Include="Codecs\WAV\DataChunk.cs" />
-    <Compile Include="Codecs\WAV\FmtChunk.cs" />
     <Compile Include="Codecs\WAV\WaveFileChunk.cs" />
     <Compile Include="Codecs\WAV\WaveFileReader.cs" />
     <Compile Include="Codecs\WAV\WaveWriter.cs" />
@@ -565,13 +564,13 @@
     <Compile Include="Tags\ID3\UnsyncStream.cs" />
     <Compile Include="Utils\BitReader.cs" />
     <Compile Include="Win32\ComObject.cs" />
-    <Compile Include="SoundOut\MMInterop\NativeMethods.cs" />
+    <Compile Include="SoundOut\MmInterop\NativeMethods.cs" />
     <Compile Include="Utils\FlacBitReader.cs" />
     <Compile Include="Win32\IUnknown.cs" />
-    <Compile Include="SoundOut\MMInterop\WaveHeader.cs" />
-    <Compile Include="SoundOut\MMInterop\WaveInCaps.cs" />
-    <Compile Include="SoundOut\MMInterop\WaveMsg.cs" />
-    <Compile Include="SoundOut\MMInterop\WaveOutCaps.cs" />
+    <Compile Include="SoundOut\MmInterop\WaveHeader.cs" />
+    <Compile Include="SoundOut\MmInterop\WaveInCaps.cs" />
+    <Compile Include="SoundOut\MmInterop\WaveMsg.cs" />
+    <Compile Include="SoundOut\MmInterop\WaveOutCaps.cs" />
     <Compile Include="SoundOut\ISoundOut.cs" />
     <Compile Include="SoundOut\PlaybackState.cs" />
     <Compile Include="Streams\LoopStream.cs" />
@@ -606,6 +605,10 @@
       <LastGenOutput>FlacSubFrameLPC_Calculation.cs</LastGenOutput>
     </None>
     <None Include="cscore.snk">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <Compile Include="Codecs\WAV\FMTChunk.cs" />
+    <None Include="CSCore.dll.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
