--- a/CSCore.OSX/CSCore.OSX.csproj
+++ b/CSCore.OSX/CSCore.OSX.csproj
@@ -40,6 +40,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OSXCoreAudio\OSXAudioDecoder.cs" />
     <Compile Include="OSXCoreAudio\AudioStreamSource.cs" />
+    <Compile Include="OSXCoreAudio\OSXAudio.cs" />
+    <Compile Include="Codecs\AAC\AACDecoderOSX.cs" />
+    <Compile Include="Codecs\MP3\MP3DecoderOSX.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -50,5 +53,17 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="OSXCoreAudio\" />
+    <Folder Include="Codecs\" />
+    <Folder Include="Codecs\AAC\" />
+    <Folder Include="Codecs\MP3\" />
   </ItemGroup>
+  <ProjectExtensions>
+    <MonoDevelop>
+      <Properties>
+        <Policies>
+          <DotNetNamingPolicy DirectoryNamespaceAssociation="PrefixedHierarchical" ResourceNamePolicy="FileFormatDefault" />
+        </Policies>
+      </Properties>
+    </MonoDevelop>
+  </ProjectExtensions>
 </Project>
