--- a/CSCore/CSCore.csproj
+++ b/CSCore/CSCore.csproj
@@ -611,6 +611,8 @@
     <None Include="CSCore.dll.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <Compile Include="Utils\PlatformDetection.cs" />
+    <Compile Include="Codecs\DefaultCodecAction.cs" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
