--- a/CSCore/CSCore.csproj
+++ b/CSCore/CSCore.csproj
@@ -328,6 +328,7 @@
     <Compile Include="SoundIn\WaveInDevice.cs" />
     <Compile Include="SoundOut\ALSoundOut.cs" />
     <Compile Include="SoundOut\AL\ALErrorCodes.cs" />
+    <Compile Include="SoundOut\AL\ALException.cs" />
     <Compile Include="SoundOut\DirectSoundOut.cs" />
     <Compile Include="SoundOut\MmInterop\Utils.cs" />
     <Compile Include="SoundOut\MmInterop\WaveCallback.cs" />
@@ -338,7 +339,6 @@
     <Compile Include="SoundOut\AL\ALDevice.cs" />
     <Compile Include="SoundOut\AL\ALFormat.cs" />
     <Compile Include="SoundOut\AL\ALInterops.cs" />
-    <Compile Include="SoundOut\AL\ALPlayback.cs" />
     <Compile Include="SoundOut\AL\ALSource.cs" />
     <Compile Include="SoundOut\AL\ALSourceParameters.cs" />
     <Compile Include="SoundOut\AL\ALSourceState.cs" />
