--- a/CSCore.OSX/CSCore.OSX.csproj
+++ b/CSCore.OSX/CSCore.OSX.csproj
@@ -66,12 +66,16 @@
       </Properties>
     </MonoDevelop>
   </ProjectExtensions>
-  <PropertyGroup Condition=" '$(OS)' == 'Unix' ">
+  <PropertyGroup Condition=" '$(OS)' == 'Unix' And '@(_SourceItemsToCopyToOutputDirectory)' != '' ">
 	<CustomCommands>
 	  <CustomCommands>
-	    <Command type="AfterBuild" command="monolinker -c skip -b true -l none -p link MonoMac -p skip CSCore -o ../linked-output/${ProjectConfig} -a CSCore.OSX.dll" workingdir="${TargetDir}" />
-	    <Command type="AfterBuild" command="mono ${SolutionDir}/packages/ILRepack.2.0.10/tools/ILRepack.exe /out:../../merged-output/${ProjectConfig}/${TargetName} ${TargetFile} MonoMac.dll" workingdir="${TargetDir}/../linked-output/${ProjectConfig}" />
+	    <Command ContinueOnError="true" type="AfterBuild" command="monolinker -c skip -b true -l none -p link MonoMac -p skip CSCore -o ../linked-output/${ProjectConfig} -a CSCore.OSX.dll" workingdir="${TargetDir}" />
+	    <Command ContinueOnError="true" type="AfterBuild" command="mono ${SolutionDir}/packages/ILRepack.2.0.10/tools/ILRepack.exe /out:../../merged-output/${ProjectConfig}/${TargetName} ${TargetFile} MonoMac.dll" workingdir="${TargetDir}/../linked-output/${ProjectConfig}" />
 	    <Command type="AfterBuild" command="cp ${TargetDir}/CSCore.OSX.xml ${TargetDir}/../merged-output/${ProjectConfig}/" />
+	    <Command type="AfterBuild" command="rm -rf ${TargetDir}" />
+	    <Command type="AfterBuild" command="mkdir ${TargetDir}" />
+	    <Command type="AfterBuild" command="cp ${TargetDir}/../merged-output/${ProjectConfig}/${TargetName} ${TargetDir}" />
+	    <Command type="AfterBuild" command="cp ${TargetDir}/../merged-output/${ProjectConfig}/CSCore.OSX.xml ${TargetDir}" />
 	  </CustomCommands>
 	</CustomCommands>
   </PropertyGroup>
