fix mixed case in CSCore post build script

--- a/CSCore/CSCore.csproj
+++ b/CSCore/CSCore.csproj
@@ -621,7 +621,7 @@
   <PropertyGroup>
     <PostBuildEvent>
       @echo off 
-      setLocal ENABLEDELAYEDEXPANSION
+      SETLOCAL ENABLEDELAYEDEXPANSION
       chcp 65001
 
       set errorCode=0
