fix postbuild for appveyor

--- a/CSCore/CSCore.csproj
+++ b/CSCore/CSCore.csproj
@@ -619,19 +619,18 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>
-      "setlocal ENABLEDELAYEDEXPANSION
-      chcp 65001
+    <PostBuildEvent>setlocal ENABLEDELAYEDEXPANSION
+chcp 65001
 
-      set errorCode=0
+set errorCode=0
 
-      set target=$(TargetPath)
-      set project=$(ProjectPath)
+set target=$(TargetPath)
+set project=$(ProjectPath)
 
-      set sdk=%25PROGRAMFILES(x86)%25\Microsoft SDKs\Windows\v8.1A\bin\NETFX 4.5.1 Tools
-      set framework=%25WINDIR%25\Microsoft.NET\Framework\v2.0.50727
-      set inlineILCompiler=$(SolutionDir)Tools\InlineILCompiler\InlineILCompiler\bin\$(ConfigurationName)\InlineILCompiler.exe
-      set cscli=$(SolutionDir)Tools\CSCli\bin\$(ConfigurationName)\CSCli.exe
+set sdk=%25PROGRAMFILES(x86)%25\Microsoft SDKs\Windows\v8.1A\bin\NETFX 4.5.1 Tools
+set framework=%25WINDIR%25\Microsoft.NET\Framework\v2.0.50727
+set inlineILCompiler=$(SolutionDir)Tools\InlineILCompiler\InlineILCompiler\bin\$(ConfigurationName)\InlineILCompiler.exe
+set cscli=$(SolutionDir)Tools\CSCli\bin\$(ConfigurationName)\CSCli.exe
 
       IF exist "%25sdk%25\." (
       echo OK: The Microsoft Windows SDK was found.
@@ -675,23 +674,22 @@
       )
       )
 
-      echo.
-      echo.
-      echo Calling the inline-il-compiler ...
-      call "%25inlineILCompiler%25"
+echo.
+echo.
+echo Calling the inline-il-compiler ...
+call "%25inlineILCompiler%25"
 
-      echo.
-      echo.
-      echo Calling CSCli ...
-      call "%25cscli%25" -file:"$(TargetPath)" -r:"RemoveObjAttribute" -c:"CSCalliAttribute"
+echo.
+echo.
+echo Calling CSCli ...
+call "%25cscli%25" -file:"$(TargetPath)" -r:"RemoveObjAttribute" -c:"CSCalliAttribute"
 
-      :EXIT
-      EXIT /B %25errorCode%25
+:EXIT
+EXIT /B %25errorCode%25
 
-      :EXIT_ERR
-      set errorCode=-1
-      goto EXIT"
-</PostBuildEvent>
+:EXIT_ERR
+set errorCode=-1
+goto EXIT</PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
     <PreBuildEvent>
