--- a/CSCore/CSCore.csproj
+++ b/CSCore/CSCore.csproj
@@ -619,77 +619,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>setlocal ENABLEDELAYEDEXPANSION
-chcp 65001
-
-set errorCode=0
-
-set target=$(TargetPath)
-set project=$(ProjectPath)
-
-set sdk=%25PROGRAMFILES(x86)%25\Microsoft SDKs\Windows\v8.1A\bin\NETFX 4.5.1 Tools
-set framework=%25WINDIR%25\Microsoft.NET\Framework\v2.0.50727
-set inlineILCompiler=$(SolutionDir)Tools\InlineILCompiler\InlineILCompiler\bin\$(ConfigurationName)\InlineILCompiler.exe
-set cscli=$(SolutionDir)Tools\CSCli\bin\$(ConfigurationName)\CSCli.exe
-
-      IF exist "%25sdk%25\." (
-      echo OK: The Microsoft Windows SDK was found.
-      ) else (
-      echo FAILED: The Microsoft Windows SDK Dir was not found. Check the following path: "%25sdk%25"
-      goto EXIT_ERR
-      )
-      IF exist "%25framework%25\." (
-      echo OK: The .NET Framework Dir was found.
-      ) else (
-      echo FAILED: The Framework-Dir was not found. Check the following path: "%25framework%25"
-      goto EXIT_ERR
-      )
-      IF exist "%25inlineILCompiler%25" (
-      echo OK: Found the inline-il-compiler.
-      ) else (
-      echo FAILED: The inline-il-compiler was not found. Check the following path: "%25inlineILCompiler%25"
-      goto EXIT_ERR
-      )
-      IF exist "%25cscli%25" (
-      echo OK: Found the cscli-compiler.
-      ) else (
-      echo FAILED: The cscli was not found. Check the following path: "%25cscli%25"
-      goto EXIT_ERR
-      )
-
-      if $(ConfigurationName) == Debug (
-      echo Build-Configuration: DEBUG
-      echo    DEBUG=IMPL
-      echo    NO OPTIMIZE
-      set ilasm_args=/DLL /DEBUG=IMPL
-      ) else (
-      if $(ConfigurationName) == Release (
-      echo Build-Configuration: RELEASE
-      echo    NO DEBUG
-      echo    OPTIMIZE
-      set ilasm_args=/DLL /OPTIMIZE
-      ) else (
-      echo FAILED: Invalid Configuration.
-      goto EXIT_ERR
-      )
-      )
-
-echo.
-echo.
-echo Calling the inline-il-compiler ...
-call "%25inlineILCompiler%25"
-
-echo.
-echo.
-echo Calling CSCli ...
-call "%25cscli%25" -file:"$(TargetPath)" -r:"RemoveObjAttribute" -c:"CSCalliAttribute"
-
-:EXIT
-EXIT /B %25errorCode%25
-
-:EXIT_ERR
-set errorCode=-1
-goto EXIT</PostBuildEvent>
+    <PostBuildEvent>$(ProjectDir)postbuild.cmd $(TargetPath) $(ProjectPath) $(SolutionDir) $(ConfigurationName)</PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
     <PreBuildEvent>
