--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,7 +14,7 @@ build:
   parallel: true
   verbosity: minimal
 after_build:
-  - cmd: nuget pack CSCore\CSCore.csproj -Prop Configuration=%CONFIGURATION -Symbols
-  - cmd: nuget pack CSCore.OSX\CSCore.OSX.csproj -Prop Configuration=%CONFIGURATION -Symbols -IncludeReferencedProjects
+  - cmd: nuget pack CSCore\CSCore.csproj -Prop Configuration=%CONFIGURATION% -Symbols
+  - cmd: nuget pack CSCore.OSX\CSCore.OSX.csproj -Prop Configuration=%CONFIGURATION% -Symbols -IncludeReferencedProjects
 artifacts:
   - path: '**\*CSCore*.nupkg'
