--- a/CSCore/CSCore.nuspec
+++ b/CSCore/CSCore.nuspec
@@ -12,4 +12,7 @@
     <description>$description$</description>
     <copyright>Copyright 2016</copyright>
   </metadata>
+  <files>
+      <file src="CSCore.dll.config" target="content" />
+  </files>
 </package>
