Change dll config nuget package folder
This should mean it automatically gets copied across

--- a/CSCore/CSCore.nuspec
+++ b/CSCore/CSCore.nuspec
@@ -13,6 +13,6 @@
     <copyright>Copyright 2016</copyright>
   </metadata>
   <files>
-      <file src="CSCore.dll.config" target="content" />
+      <file src="CSCore.dll.config" target="lib/net40" />
   </files>
 </package>
