Add proper xml header to CSCore.dll.config

--- a/CSCore/CSCore.dll.config
+++ b/CSCore/CSCore.dll.config
@@ -1,4 +1,5 @@
-﻿<configuration>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<configuration>
 	<dllmap os="linux" dll="openal32.dll" target="libopenal.so.1" />
 	<dllmap os="osx" dll="openal32.dll" target="/System/Library/Frameworks/OpenAL.framework/OpenAL" />
 </configuration>
